Further work on c2m4 Updated entity template Updated map template Added a changelog file for permanently documenting each release within the files themselves Fixed physics clips on c1m4

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -3,6 +3,7 @@
 ; #################  PLAYER BLOCKERS  #################
 ; --- Types: 0 = Everyone, 1 = Survivors, 2 = Player Infected
 ; --- 3 = All Special Infected (Player and AI), 4 = All players and physics objects
+; --- NOTE: Type 4 required boxmins & boxmaxs to be specified in order to function, due to how VPhysics works
 add:
 {
 	"classname" "env_physics_blocker"
@@ -99,7 +100,35 @@ add:
 	"spawnflags" "2"
 	"count" "1"
 }
-; --- Item spawns -----------Pain Pills
+; --- Item Spawns
+; --- Set each item to "1" to allow them to potentially spawn
+; --- ITEMS: 1 = Ammo Pile, 2 = First Aid Kit, 3 = Molotov, 4 = Pills, 5 = Pipebomb, 6 = Oxygen Tank, 7 = Propane Tank, 8 = Gas Can
+; --- ITEMS: 11 = Adrenaline, 12 = Defib, 13 = Bile, 16 = Chainsaw, 17 = Grenade Launcher, 18 = M60
+; --- SPAWNFLAGS: Bitwise 2 = Always Spawn, Bitwise 8 = Infinite
+; --- NOTE: Defaults for this entity have some items set to "1", always include every item to prevent unwanted spawning
+; --- NOTE: Items 9-10 & 14-15 do not exist
+add:
+{
+	"classname" "weapon_item_spawn"
+	"origin" "[x y z]"
+	"angles" "[p y r]"
+	"spawnflags" "0"
+	"item1" "0"
+	"item2" "0"
+	"item3" "0"
+	"item4" "0"
+	"item5" "0"
+	"item6" "0"
+	"item7" "0"
+	"item8" "0"
+	"item11" "0"
+	"item12" "0"
+	"item13" "0"
+	"item16" "0"
+	"item17" "0"
+	"item18" "0"
+}
+; --- Pain Pills only
 ; --- NOTE: Setting "spawnflags" to "2" will cause the item to ALWAYS spawn, not advised
 add:
 {
@@ -112,6 +141,7 @@ add:
 ; --- Add infected ladders by duplicating an existing ladder
 ; --- Ordering of normals has been corrected to X Y Z, previous ladder implementations were ordered as Z Y X 
 ; --- Survivor ladders can also be duplicated using team valve of 0, though they are not visible or climbable during the duplication, they will function when loaded via Stripper
+; --- NOTE: Any origin coordinate being over 16384 will cause the ladder to function improperly
 add:
 {
 	"classname" "func_simpleladder"
@@ -133,9 +163,9 @@ add:
 add:
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_[brush name]AddOutputmins [-x -y -z]0-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_[brush name]AddOutputmaxs [x y z]0-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_[brush name]AddOutputsolid 20-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_[brush name],AddOutput,mins [-x -y -z],0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_[brush name],AddOutput,maxs [x y z],0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_[brush name],AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "[brush type]"
@@ -156,9 +186,9 @@ add:
 ; ####################  I/O LOGIC  ####################
 ; --- Template for modifying entity input/output logic
 ; --- All parameters
-"[output named]" "[target entities named][via this input][parameter override][delay in seconds][trigger only once]"
-; --- No parameter override, no delay, allow triggering more than once (default)
-"[output named]" "[target entities named][via this input]0-1"
+"[output named]" "[target entities named],[via this input],[parameter override],[delay in seconds],[fire only once]"
+; --- No parameter override, no delay, allow firing more than once (default)
+"[output named]" "[target entities named],[via this input],,0,-1"
 
 ; --- Method for removing _commentary.txt / lump / anv_mapfixes.nut entities
 ; --- As they are spawned after the map is loaded they need to remove after a delay
@@ -171,6 +201,6 @@ modify:
 	}
 	insert:
 	{
-		"OnVersusPostIO" "[entity targetname or classname]Kill10-1"
+		"OnVersusPostIO" "[entity targetname or classname],Kill,,10,-1"
 	}
 }
