--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -69,3 +69,12 @@ modify:
 		"spawnflags" "8193"
 	}
 }
+
+; =====================================================
+; ==                   SOUND FIXES                   ==
+; ==             Remove or fix map sounds            ==
+; =====================================================
+filter:
+{
+	"classname" "env_soundscape"
+}
