--- a/cfg/stripper/maps/c1m1_hotel.cfg
+++ b/cfg/stripper/maps/c1m1_hotel.cfg
@@ -1,12 +1,7 @@
 ; ############  DIRECTOR AND EVENT CHANGES  ###########
 ; =====================================================
-; ==              DIRECTOR MODIFICATION              ==
-; ==  Modify director and event scripts, tank spawns ==
-; =====================================================
-
-; =====================================================
-; ==                EVENT MODIFICATION               ==
-; ==       Modify event layout or functionality      ==
+; ==          DIRECTOR & EVENT MODIFICATION          ==
+; ==       Modify director behaviour and events      ==
 ; =====================================================
 ; --- Make survivors have to call the elevator to the top before going to the ground floor
 ; --- Fake the elevator moving with visuals and sounds
@@ -306,7 +301,7 @@ add:
 
 ; =====================================================
 ; ==                   STUCK SPOTS                   ==
-; ==  Prevent players from getting stuck on the map  ==
+; ==  Prevent players from getting stuck in the map  ==
 ; =====================================================
 add:
 ; --- Block getting stuck on top of the suitcase pile just before the kitchen
