--- a/cfg/stripper/maps/c1m2_streets.cfg
+++ b/cfg/stripper/maps/c1m2_streets.cfg
@@ -1,18 +1,7 @@
 ; ############  DIRECTOR AND EVENT CHANGES  ###########
 ; =====================================================
-; ==              DIRECTOR MODIFICATION              ==
-; ==  Modify director and event scripts, tank spawns ==
-; =====================================================
-; --- Remove the ambush trigger before the walkway that makes the director only spawn chargers
-; --- With the removal of the trigger that sets the director to it's pre-event state after the walkway, this remains on until the event starts
-filter:
-{
-	"hammerid" "665506"
-}
-
-; =====================================================
-; ==                EVENT MODIFICATION               ==
-; ==       Modify event layout or functionality      ==
+; ==          DIRECTOR & EVENT MODIFICATION          ==
+; ==       Modify director behaviour and events      ==
 ; =====================================================
 ; --- Move the cola into a new location near the middle of the store
 modify:
@@ -569,7 +558,7 @@ add:
 
 ; =====================================================
 ; ==                   STUCK SPOTS                   ==
-; ==  Prevent players from getting stuck on the map  ==
+; ==  Prevent players from getting stuck in the map  ==
 ; =====================================================
 add:
 ; --- Block getting stuck on top of the door barricade in the saferoom.
@@ -1045,6 +1034,12 @@ modify:
 ; ==              TRIGGER REMOVAL / FIX              ==
 ; ==    Fix triggers that interfere with gameplay    ==
 ; =====================================================
+; --- Remove the ambush trigger before the walkway that makes the director only spawn chargers
+; --- With the removal of the trigger that sets the director to it's pre-event state after the walkway, this remains on until the event starts
+filter:
+{
+	"hammerid" "665506"
+}
 
 
 ; #############  LADDER CHANGES AND FIXES  ############
