--- a/cfg/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/maps/c2m2_fairgrounds.cfg
@@ -1,12 +1,7 @@
 ; ############  DIRECTOR AND EVENT CHANGES  ###########
 ; =====================================================
-; ==              DIRECTOR MODIFICATION              ==
-; ==  Modify director and event scripts, tank spawns ==
-; =====================================================
-
-; =====================================================
-; ==                EVENT MODIFICATION               ==
-; ==       Modify event layout or functionality      ==
+; ==          DIRECTOR & EVENT MODIFICATION          ==
+; ==       Modify director behaviour and events      ==
 ; =====================================================
 
 
@@ -806,7 +801,7 @@ add:
 
 ; =====================================================
 ; ==                   STUCK SPOTS                   ==
-; ==  Prevent players from getting stuck on the map  ==
+; ==  Prevent players from getting stuck in the map  ==
 ; =====================================================
 add:
 ; --- Block players from falling behind hedges outside kiddyland (not actually stuck, but it LOOKS like a stuck spot to a player)
