--- a/cfg/stripper/maps/c2m3_coaster.cfg
+++ b/cfg/stripper/maps/c2m3_coaster.cfg
@@ -1,12 +1,7 @@
 ; ############  DIRECTOR AND EVENT CHANGES  ###########
 ; =====================================================
-; ==              DIRECTOR MODIFICATION              ==
-; ==    Modify director scripts and event scripts    ==
-; =====================================================
-
-; =====================================================
-; ==                EVENT MODIFICATION               ==
-; ==       Modify event layout or functionality      ==
+; ==          DIRECTOR & EVENT MODIFICATION          ==
+; ==       Modify director behaviour and events      ==
 ; =====================================================
 
 
@@ -441,7 +436,7 @@ add:
 
 ; =====================================================
 ; ==                   STUCK SPOTS                   ==
-; ==  Prevent players from getting stuck on the map  ==
+; ==  Prevent players from getting stuck in the map  ==
 ; =====================================================
 add:
 ; --- Block a stuck spot before the coaster one way drop, between some hedges and support beams
