--- a/cfg/stripper/maps/c1m3_mall.cfg
+++ b/cfg/stripper/maps/c1m3_mall.cfg
@@ -1,12 +1,7 @@
 ; ############  DIRECTOR AND EVENT CHANGES  ###########
 ; =====================================================
-; ==              DIRECTOR MODIFICATION              ==
-; ==  Modify director and event scripts, tank spawns ==
-; =====================================================
-
-; =====================================================
-; ==                EVENT MODIFICATION               ==
-; ==       Modify event layout or functionality      ==
+; ==          DIRECTOR & EVENT MODIFICATION          ==
+; ==       Modify director behaviour and events      ==
 ; =====================================================
 ; --- Force survivors to always take the lower path
 modify:
@@ -241,7 +236,7 @@ add:
 
 ; =====================================================
 ; ==                   STUCK SPOTS                   ==
-; ==  Prevent players from getting stuck on the map  ==
+; ==  Prevent players from getting stuck in the map  ==
 ; =====================================================
 
 ; =====================================================
