--- a/cfg/stripper/maps/c1m4_atrium.cfg
+++ b/cfg/stripper/maps/c1m4_atrium.cfg
@@ -1,7 +1,7 @@
 ; ############  DIRECTOR AND EVENT CHANGES  ###########
 ; =====================================================
-; ==              DIRECTOR MODIFICATION              ==
-; ==  Modify director and event scripts, tank spawns ==
+; ==          DIRECTOR & EVENT MODIFICATION          ==
+; ==       Modify director behaviour and events      ==
 ; =====================================================
 ; --- Spawn tank at 29 seconds (just as the elevator opens) - This freezes the finale while giving teams a chance complete the elevator attack
 modify:
@@ -37,11 +37,6 @@ add:
 	"targetname" "tank_wrongway"
 	"StartDisabled" "1"
 }
-
-; =====================================================
-; ==                EVENT MODIFICATION               ==
-; ==       Modify event layout or functionality      ==
-; =====================================================
 
 
 ; ################  ITEM SPAWN CHANGES  ###############
@@ -79,7 +74,7 @@ add:
 
 ; =====================================================
 ; ==                   STUCK SPOTS                   ==
-; ==  Prevent players from getting stuck on the map  ==
+; ==  Prevent players from getting stuck in the map  ==
 ; =====================================================
 
 ; =====================================================
@@ -92,9 +87,21 @@ add:
 ; --- Re-opening Construction
 {
 	"classname" "env_physics_blocker"
-	"origin" "-2576 4352 212"
+	"origin" "-2576 -4352 212"
 	"mins" "-208 -128 -20"
 	"maxs" "208 128 20"
+	"boxmins" "-208 -128 -20"
+	"boxmaxs" "208 128 20"
+	"initialstate" "1"
+	"BlockType" "4"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-2864 -4096 84"
+	"mins" "-208 -128 -20"
+	"maxs" "208 128 20"
+	"boxmins" "-208 -128 -20"
+	"boxmaxs" "208 128 20"
 	"initialstate" "1"
 	"BlockType" "4"
 }
@@ -104,6 +111,8 @@ add:
 	"origin" "-3682 -4436 196"
 	"mins" "-322 -44 -36"
 	"maxs" "322 44 36"
+	"boxmins" "-322 -44 -36"
+	"boxmaxs" "322 44 36"
 	"initialstate" "1"
 	"BlockType" "4"
 }
@@ -113,6 +122,8 @@ add:
 	"origin" "-4256 -4464 196"
 	"mins" "-176 -16 -36"
 	"maxs" "176 16 36"
+	"boxmins" "-176 -16 -36"
+	"boxmaxs" "176 16 36"
 	"initialstate" "1"
 	"BlockType" "4"
 }
@@ -122,6 +133,8 @@ add:
 	"origin" "-4832 -4444 196"
 	"mins" "-320 -36 -36"
 	"maxs" "320 36 36"
+	"boxmins" "-320 -36 -36"
+	"boxmaxs" "320 36 36"
 	"initialstate" "1"
 	"BlockType" "4"
 }
@@ -131,6 +144,8 @@ add:
 	"origin" "-5536 -3312 196"
 	"mins" "-320 -48 -36"
 	"maxs" "320 48 36"
+	"boxmins" "-320 -48 -36"
+	"boxmaxs" "320 48 36"
 	"initialstate" "1"
 	"BlockType" "4"
 }
@@ -140,15 +155,19 @@ add:
 	"origin" "-3344 -3284 196"
 	"mins" "-172 -20 -36"
 	"maxs" "172 20 36"
+	"boxmins" "-172 -20 -36"
+	"boxmaxs" "172 20 36"
 	"initialstate" "1"
 	"BlockType" "4"
 }
 ; --- Beef Boy Stew
 {
 	"classname" "env_physics_blocker"
-	"origin" "-2736 3283 196"
+	"origin" "-2736 -3283 196"
 	"mins" "-176 -19 -36"
 	"maxs" "176 19 36"
+	"boxmins" "-176 -19 -36"
+	"boxmaxs" "176 19 36"
 	"initialstate" "1"
 	"BlockType" "4"
 }
@@ -159,6 +178,8 @@ add:
 	"origin" "-2640 -4336 478"
 	"mins" "-272 -144 -10"
 	"maxs" "272 144 10"
+	"boxmins" "-272 -144 -10"
+	"boxmaxs" "272 144 10"
 	"initialstate" "1"
 	"BlockType" "4"
 }
@@ -167,6 +188,8 @@ add:
 	"origin" "-2464 -3873 478"
 	"mins" "-96 -319 -10"
 	"maxs" "96 319 10"
+	"boxmins" "-96 -319 -10"
+	"boxmaxs" "96 319 10"
 	"initialstate" "1"
 	"BlockType" "4"
 }
@@ -176,6 +199,8 @@ add:
 	"origin" "-4992 -4472 464"
 	"mins" "-176 -8 -24"
 	"maxs" "176 8 24"
+	"boxmins" "-176 -8 -24"
+	"boxmaxs" "176 8 24"
 	"initialstate" "1"
 	"BlockType" "4"
 }
@@ -185,6 +210,8 @@ add:
 	"origin" "-6012 -3300 464"
 	"mins" "-172 -36 -24"
 	"maxs" "172 36 24"
+	"boxmins" "-172 -36 -24"
+	"boxmaxs" "172 36 24"
 	"initialstate" "1"
 	"BlockType" "4"
 }
@@ -193,6 +220,8 @@ add:
 	"origin" "-6324 -3388 480"
 	"mins" "-140 -124 -8"
 	"maxs" "140 124 8"
+	"boxmins" "-140 -124 -8"
+	"boxmaxs" "140 124 8"
 	"initialstate" "1"
 	"BlockType" "4"
 }
@@ -202,6 +231,8 @@ add:
 	"origin" "-5419 -3316 384"
 	"mins" "-235 -52 -104"
 	"maxs" "235 52 104"
+	"boxmins" "-235 -52 -104"
+	"boxmaxs" "235 52 104"
 	"initialstate" "1"
 	"BlockType" "4"
 }
@@ -211,6 +242,8 @@ add:
 	"origin" "-3373 -3312 472"
 	"mins" "-301 -48 -16"
 	"maxs" "301 48 16"
+	"boxmins" "-301 -48 -16"
+	"boxmaxs" "301 48 16"
 	"initialstate" "1"
 	"BlockType" "4"
 }
@@ -221,6 +254,8 @@ add:
 	"origin" "-3636 -4456 720"
 	"mins" "-320 -24 -24"
 	"maxs" "320 24 24"
+	"boxmins" "-320 -24 -24"
+	"boxmaxs" "320 24 24"
 	"initialstate" "1"
 	"BlockType" "4"
 }
@@ -229,6 +264,8 @@ add:
 	"origin" "-3636 -4416 720"
 	"mins" "-288 -16 -24"
 	"maxs" "288 16 24"
+	"boxmins" "-288 -16 -24"
+	"boxmaxs" "288 16 24"
 	"initialstate" "1"
 	"BlockType" "4"
 }
@@ -238,6 +275,8 @@ add:
 	"origin" "-4179 -4438 720"
 	"mins" "-177 -42 -24"
 	"maxs" "177 42 24"
+	"boxmins" "-177 -42 -24"
+	"boxmaxs" "177 42 24"
 	"initialstate" "1"
 	"BlockType" "4"
 }
@@ -247,6 +286,8 @@ add:
 	"origin" "-4836 -4464 721"
 	"mins" "-321 -16 -24"
 	"maxs" "321 16 24"
+	"boxmins" "-321 -16 -24"
+	"boxmaxs" "321 16 24"
 	"initialstate" "1"
 	"BlockType" "4"
 }
@@ -256,6 +297,8 @@ add:
 	"origin" "-6247 -3354 736"
 	"mins" "-175 -134 -3"
 	"maxs" "175 134 3"
+	"boxmins" "-175 -134 -3"
+	"boxmaxs" "175 134 3"
 	"initialstate" "1"
 	"BlockType" "4"
 }
