Completed work on c2m4 / c2m5 Added saferoom props for continuity Updated readme

--- a/cfg/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/maps/c2m2_fairgrounds.cfg
@@ -2340,3 +2340,143 @@ add:
 	"origin" "1341 -74 42"
 	"angles" "0 0 0"
 }
+; =====================================================
+; ==               C2M3 SAFEROOM REWORK              ==
+; ==        Props from reworked c2m3 saferoom        ==
+; =====================================================
+add:
+; --- Railings by the door
+{
+	"classname" "prop_dynamic"
+	"origin" "-5025 -5554 -64"
+	"angles" "0 270 0"
+	"model" "models/props_urban/wood_railing001_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4929 -5554 -64"
+	"angles" "0 270 0"
+	"model" "models/props_urban/wood_railing001_64.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4895 -5554 -64"
+	"angles" "0 270 0"
+	"model" "models/props_urban/wood_railing_post001.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-5025 -5460 -64"
+	"angles" "0 270 0"
+	"model" "models/props_urban/wood_railing001_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4929 -5460 -64"
+	"angles" "0 270 0"
+	"model" "models/props_urban/wood_railing001_64.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4895 -5460 -64"
+	"angles" "0 270 0"
+	"model" "models/props_urban/wood_railing_post001.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Plants by the door
+{
+	"classname" "prop_dynamic"
+	"origin" "-5004 -5596 -64"
+	"angles" "0 5.5 0"
+	"model" "models/props_foliage/urban_pot_bigplant01.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-5000 -5416 -57"
+	"angles" "0 75.5 -75"
+	"model" "models/props_foliage/urban_pot_bigplant01.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Tunnel of Love heart
+{
+	"classname" "prop_dynamic"
+	"origin" "-4639 -5504 68"
+	"angles" "0 0 0"
+	"model" "models/props_fairgrounds/tol_tunnel_heart.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4640 -5504 -128"
+	"angles" "0 180 -180"
+	"model" "models/props_fairgrounds/tol_tunnel_heart.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"lightingorigin" "tol_heart_lighting"
+}
+; --- Fix lighting origin
+{
+	"classname" "info_target"
+	"origin" "-4639 -5504 68"
+	"targetname" "tol_heart_lighting"
+}
+; --- Swans
+{
+	"classname" "prop_dynamic"
+	"origin" "-4563 -5415 -64"
+	"angles" "0 180 0"
+	"model" "models/props_fairgrounds/swan_boat.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-5086 -5506 -11"
+	"angles" "79 0 0"
+	"model" "models/props_fairgrounds/swan_boat.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Clipping inside swan
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4548 -5414 -44"
+	"mins" "-30 -22.5 -8"
+	"maxs" "30 22.5 8"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+; --- Fences
+{
+	"classname" "prop_dynamic"
+	"origin" "-4494 -5617 -64"
+	"angles" "0 90 0"
+	"model" "models/props_fortifications/police_barrier001_128_reference.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"skin" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4497 -5605 -64"
+	"angles" "0 90 0"
+	"model" "models/props_fortifications/police_barrier001_128_reference.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"skin" "1"
+}
