--- a/cfg/stripper/maps/c2m4_barns.cfg
+++ b/cfg/stripper/maps/c2m4_barns.cfg
@@ -237,6 +237,103 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
+; --- Block standing on the hedges at the barns exit
+{
+	"classname" "prop_dynamic"
+	"origin" "136 256 -112"
+	"angles" "0 180 0"
+	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "272 128 -112"
+	"angles" "0 90 0"
+	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "252 -220 416"
+	"mins" "-4 -452 -608"
+	"maxs" "4 452 608"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "139 256 530"
+	"mins" "-125 -22 -494"
+	"maxs" "125 22 494"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Block standing on the porta potties by the event button
+{
+	"classname" "env_physics_blocker"
+	"origin" "-2346 1133 444"
+	"mins" "-33 -99 -572"
+	"maxs" "33 99 572"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Block standing on the fences at the event
+{
+	"classname" "env_physics_blocker"
+	"origin" "-2499 755 493"
+	"mins" "-49 -9 -531"
+	"maxs" "49 9 531"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-2751 755 493"
+	"mins" "-49 -9 -531"
+	"maxs" "49 9 531"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Block standing on the tree at the event
+{
+	"classname" "env_physics_blocker"
+	"origin" "-2840 861 486"
+	"mins" "-4.5 -4.5 -538"
+	"maxs" "4.5 4.5 538"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Block standing on the porta potties at the end of the event
+{
+	"classname" "env_physics_blocker"
+	"origin" "212 1760 453"
+	"mins" "-32 -60 -571"
+	"maxs" "32 60 571"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "209 2069 453"
+	"angles" "0 165 0"
+	"mins" "-29.5 -29.5 -571"
+	"maxs" "29.5 29.5 571"
+	"boxmins" "-29.5 -29.5 -571"
+	"boxmaxs" "29.5 29.5 571"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Block climbing on the generator at the end of the event
+{
+	"classname" "env_physics_blocker"
+	"origin" "170 2220 -158"
+	"mins" "-6 -6 -98"
+	"maxs" "6 6 98"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 
 ; =====================================================
 ; ==                  OUT OF BOUNDS                  ==
@@ -257,6 +354,74 @@ add:
 ; ==                   STUCK SPOTS                   ==
 ; ==  Prevent players from getting stuck in the map  ==
 ; =====================================================
+add:
+; --- Block stuck spots under barn roof trimming
+{
+	"classname" "env_physics_blocker"
+	"origin" "-433 -124 57"
+	"mins" "-1 -396 -31"
+	"maxs" "1 396 31"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-783 -124 57"
+	"mins" "-1 -396 -31"
+	"maxs" "1 396 31"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1137 -124 57"
+	"mins" "-1 -396 -31"
+	"maxs" "1 396 31"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1487 -124 57"
+	"mins" "-1 -396 -31"
+	"maxs" "1 396 31"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1841 -260 57"
+	"mins" "-1 -260 -31"
+	"maxs" "1 260 31"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-2191 -260 57"
+	"mins" "-1 -260 -31"
+	"maxs" "1 260 31"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+; --- Block getting stuck roof of building after the barn drop
+{
+	"classname" "env_physics_blocker"
+	"origin" "-3072 0 144"
+	"mins" "-140 -55 -36"
+	"maxs" "140 55 36"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+; --- Block stuck spot on event button roof
+{
+	"classname" "env_physics_blocker"
+	"origin" "-2624 1695 -48"
+	"mins" "-176 -34 -56"
+	"maxs" "176 34 56"
+	"initialstate" "1"
+	"BlockType" "0"
+}
 
 ; =====================================================
 ; ==                 NUISANCE CHANGES                ==
@@ -282,6 +447,157 @@ filter:
 filter:
 {
 	"hammerid" "1405561"
+}
+add:
+; --- Fix LOS on carnival sign props before barns
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "anv_mapfixes_losfix_sign1AddOutputmins -104 -2 -320-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_sign1AddOutputmaxs 104 2 320-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_sign1AddOutputsolid 20-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_sign2AddOutputmins -104 -2 -320-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_sign2AddOutputmaxs 104 2 320-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_sign2AddOutputsolid 20-1"
+}
+{
+	"classname" "func_brush"
+	"origin" "144 1235 30"
+	"targetname" "anv_mapfixes_losfix_sign1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "144 1235 31"
+	"mins" "-104 -2 -32"
+	"maxs" "104 2 32"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "func_brush"
+	"origin" "-192 756 30"
+	"targetname" "anv_mapfixes_losfix_sign2"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-192 756 31"
+	"mins" "-104 -2 -32"
+	"maxs" "104 2 32"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+; --- Clipping on carnival signs to help with rocketspawning
+{
+	"classname" "env_physics_blocker"
+	"origin" "144 1206 19"
+	"angles" "0 0 -45"
+	"mins" "-104 -2 -36"
+	"maxs" "104 2 36"
+	"boxmins" "-104 -2 -36"
+	"boxmaxs" "104 2 36"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-191 723 19"
+	"angles" "0 0 -45"
+	"mins" "-104 -2 -36"
+	"maxs" "104 2 36"
+	"boxmins" "-104 -2 -36"
+	"boxmaxs" "104 2 36"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+; --- Clipping on barn roof to allow infected to take survivors off the edges
+; --- First roof section
+{
+	"classname" "env_physics_blocker"
+	"origin" "-864 243 -7"
+	"angles" "-27 0 0"
+	"mins" "-96 -6 -8"
+	"maxs" "96 6 8"
+	"boxmins" "-96 -6 -8"
+	"boxmaxs" "96 6 8"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1056 243 -7"
+	"angles" "27 0 0"
+	"mins" "-96 -6 -8"
+	"maxs" "96 6 8"
+	"boxmins" "-96 -6 -8"
+	"boxmaxs" "96 6 8"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-864 -490 -7"
+	"angles" "-27 0 0"
+	"mins" "-96 -6 -8"
+	"maxs" "96 6 8"
+	"boxmins" "-96 -6 -8"
+	"boxmaxs" "96 6 8"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1056 -490 -7"
+	"angles" "27 0 0"
+	"mins" "-96 -6 -8"
+	"maxs" "96 6 8"
+	"boxmins" "-96 -6 -8"
+	"boxmaxs" "96 6 8"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+; --- Second roof section
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1568 243 -7"
+	"angles" "-27 0 0"
+	"mins" "-96 -6 -8"
+	"maxs" "96 6 8"
+	"boxmins" "-96 -6 -8"
+	"boxmaxs" "96 6 8"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1760 243 -7"
+	"angles" "27 0 0"
+	"mins" "-96 -6 -8"
+	"maxs" "96 6 8"
+	"boxmins" "-96 -6 -8"
+	"boxmaxs" "96 6 8"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1568 -490 -7"
+	"angles" "-27 0 0"
+	"mins" "-96 -6 -8"
+	"maxs" "96 6 8"
+	"boxmins" "-96 -6 -8"
+	"boxmaxs" "96 6 8"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1760 -490 -7"
+	"angles" "27 0 0"
+	"mins" "-96 -6 -8"
+	"maxs" "96 6 8"
+	"boxmins" "-96 -6 -8"
+	"boxmaxs" "96 6 8"
+	"initialstate" "1"
+	"BlockType" "0"
 }
 
 
@@ -595,6 +911,15 @@ add:
 	"disableshadows" "1"
 	"rendercolor" "69 118 102"
 }
+; --- Clipping on tent
+{
+	"classname" "env_physics_blocker"
+	"origin" "-2369 1235 444"
+	"mins" "-64 -64 -572"
+	"maxs" "64 64 572"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 ; --- Additional porta potties at the end of the event
 {
 	"classname" "prop_dynamic"
@@ -611,6 +936,23 @@ add:
 	"model" "models/props_urban/outhouse001.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+}
+; --- Clipping on porta potties
+{
+	"classname" "env_physics_blocker"
+	"origin" "209 1857 453"
+	"mins" "-29.5 -29.5 -571"
+	"maxs" "29.5 29.5 571"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "206 2000 453"
+	"mins" "-29.5 -29.5 -571"
+	"maxs" "29.5 29.5 571"
+	"initialstate" "1"
+	"BlockType" "1"
 }
 
 ; =====================================================
@@ -849,11 +1191,18 @@ add:
 ; --- Extend the middle railings to the wall
 {
 	"classname" "prop_dynamic"
-	"origin" "3116.37 3860.39 -187.75, 3116.37 3860.39 -187.75"
+	"origin" "3116.37 3860.39 -187.75"
 	"angles" "0 180 0"
 	"model" "models/props_urban/wood_railing001_128.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+	"lightingorigin" "start_railing_lighting"
+}
+; --- Fix lighting origin
+{
+	"classname" "info_target"
+	"origin" "3116 3732 -188"
+	"targetname" "start_railing_lighting"
 }
 
 ; =====================================================
