--- a/cfg/stripper/maps/c2m3_coaster.cfg
+++ b/cfg/stripper/maps/c2m3_coaster.cfg
@@ -1356,3 +1356,122 @@ filter:
 {
 	"hammerid" "556621"
 }
+; =====================================================
+; ==               C2M4 SAFEROOM REWORK              ==
+; ==        Props from reworked c2m4 saferoom        ==
+; =====================================================
+add:
+; --- Table by the guns
+{
+	"classname" "prop_dynamic"
+	"origin" "-5483 1802 4"
+	"angles" "0 0 0"
+	"model" "models/props_interiors/table_folding.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Pistol spawn on the table
+{
+	"classname" "weapon_spawn"
+	"origin" "-5480 1795 35"
+	"angles" "0 105 -90"
+	"weapon_selection" "weapon_pistol"
+	"spawn_without_director" "1"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "5"
+}
+; --- Garbage by the door
+{
+	"classname" "prop_dynamic"
+	"origin" "-5495 1563 4"
+	"angles" "0 90 0"
+	"model" "models/props_urban/garbage_can002.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-5321 1339 10"
+	"angles" "0 90 0"
+	"model" "models/props_junk/trashcluster01a.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Boxes in the corner
+{
+	"classname" "prop_dynamic"
+	"origin" "-5130 1943 4"
+	"angles" "0 270 0"
+	"model" "models/props/cs_militia/boxes_frontroom.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-5096 1867 4"
+	"angles" "0 314.5 0"
+	"model" "models/props/cs_militia/boxes_garage_lower.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-5024 1869 4"
+	"angles" "0 0 0"
+	"model" "models/props/de_nuke/crate_small.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-5039 1953 4"
+	"angles" "0 0 0"
+	"model" "models/props/de_nuke/crate_extralarge.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Props to block the door
+{
+	"classname" "prop_dynamic"
+	"origin" "-4999 1800 62"
+	"angles" "0 90 -81.5"
+	"model" "models/props_fairgrounds/coaster_car01.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-5001 1475 4"
+	"angles" "0 178.5 0"
+	"model" "models/props_fortifications/police_barrier001_128_reference.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"skin" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-5015 1472 4"
+	"angles" "0 180 0"
+	"model" "models/props_fortifications/police_barrier001_128_reference.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"skin" "1"
+}
+; --- Extend the middle railings to the wall
+{
+	"classname" "prop_dynamic"
+	"origin" "-5251.63 1940.39 4.25"
+	"angles" "0 180 0"
+	"model" "models/props_urban/wood_railing001_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"lightingorigin" "end_railing_lighting"
+}
+; --- Fix lighting origin
+{
+	"classname" "info_target"
+	"origin" "-5252 1812 4"
+	"targetname" "end_railing_lighting"
+}
