Fixed some mistakes in Dark Carnival Removed c2m2 yellow tent Changed some ladders on c2m4 Removed roof boards on c2m5 and added some different props Updated readme

--- a/cfg/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/maps/c2m2_fairgrounds.cfg
@@ -215,7 +215,7 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
-; --- Block electrical box by the hotdot stands
+; --- Block electrical box by the hotdog stands
 {
 	"classname" "env_physics_blocker"
 	"origin" "3778 -2176 458"
@@ -1110,16 +1110,7 @@ add:
 	"disableshadows" "1"
 	"rendercolor" "74 104 149"
 }
-; --- Tent in kiddyland by the unmarked building
-{
-	"classname" "prop_dynamic"
-	"origin" "-1970 756 -128"
-	"angles" "0 0 0"
-	"model" "models/props_misc/fairground_tent_closed.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"rendercolor" "201 162 80"
-}
+
 ; --- Tent in kiddyland by the buggies ride
 {
 	"classname" "prop_dynamic"
@@ -1130,15 +1121,7 @@ add:
 	"disableshadows" "1"
 	"rendercolor" "83 152 189"
 }
-; --- Clipping for tents
-{
-	"classname" "env_physics_blocker"
-	"origin" "-1970 756 391"
-	"mins" "-64 -64 -377"
-	"maxs" "64 64 377"
-	"initialstate" "1"
-	"BlockType" "1"
-}
+; --- Clipping for tent
 {
 	"classname" "env_physics_blocker"
 	"origin" "-962 -762 391"
@@ -1524,8 +1507,9 @@ modify:
 	}
 	insert:
 	{
-		; --- Clip on motel roof before drop
+		; --- Clip in area behind kiddyland
 		"OnVersusPostIO" "anv_mapfixes_yeswayfairback_funcinfclipKill10-1"
+		; --- Clip on end saferoom roof
 		"OnVersusPostIO" "anv_mapfixes_meticulous_funcinfclip01Kill10-1"
 		"OnVersusPostIO" "anv_mapfixes_meticulous_funcinfclip02Kill10-1"
 	}
@@ -2322,7 +2306,7 @@ add:
 	"spawnflags" "2"
 	"count" "1"
 }
-; --- Add a static scout spawn to the new area (if sniper is enabled, otherwise it will become an HR/ammo pile)
+; --- Add a static scout spawn to the new area (if sniper is enabled)
 {
 	"classname" "weapon_spawn"
 	"origin" "2323 -318 33"
