--- a/cfg/stripper/maps/c2m4_barns.cfg
+++ b/cfg/stripper/maps/c2m4_barns.cfg
@@ -147,15 +147,6 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
-; --- Block standing on the hedges in front of saferoom
-{
-	"classname" "env_physics_blocker"
-	"origin" "2220 3449 486"
-	"mins" "-252 -7 -538"
-	"maxs" "252 7 538"
-	"initialstate" "1"
-	"BlockType" "1"
-}
 ; --- Block getting on tickets building by saferoom
 {
 	"classname" "env_physics_blocker"
@@ -1029,28 +1020,6 @@ modify:
 ; ==              Add or change ladders              ==
 ; =====================================================
 add:
-; --- Infected ladder on food cart by the blocked route at the start
-{
-	"classname" "func_simpleladder"
-	"origin" "5172 182 -13"
-	"angles" "0 90 0"
-	"model" "*91"
-	"normal.x" "-1.00"
-	"normal.y" "0.00"
-	"normal.z" "0.00"
-	"team" "2"
-}
-; --- Infected ladder on tent by the blocked route at the start
-{
-	"classname" "func_simpleladder"
-	"origin" "566 4893 0"
-	"angles" "0 270 0"
-	"model" "*86"
-	"normal.x" "-1.00"
-	"normal.y" "0.00"
-	"normal.z" "0.00"
-	"team" "2"
-}
 ; --- Infected ladder to climb over gazebo fence behind the garbage area
 {
 	"classname" "func_simpleladder"
@@ -1298,4 +1267,37 @@ add:
 	"maxs" "96 8 536"
 	"initialstate" "1"
 	"BlockType" "1"
+}
+; --- Infected ladder on fence blocking the route at the start
+{
+	"classname" "func_simpleladder"
+	"origin" "5033 632 -74"
+	"angles" "0 90 0"
+	"model" "*90"
+	"normal.x" "0.00"
+	"normal.y" "1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected ladder on food cart by the blocked route at the start
+{
+	"classname" "func_simpleladder"
+	"origin" "5172 182 -13"
+	"angles" "0 90 0"
+	"model" "*91"
+	"normal.x" "-1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected ladder on the green fence by the blocked route at the start
+{
+	"classname" "func_simpleladder"
+	"origin" "4782 4916 0"
+	"angles" "0 180 0"
+	"model" "*91"
+	"normal.x" "0.00"
+	"normal.y" "-1.00"
+	"normal.z" "0.00"
+	"team" "2"
 }
