--- a/cfg/stripper/maps/c2m5_concert.cfg
+++ b/cfg/stripper/maps/c2m5_concert.cfg
@@ -289,8 +289,8 @@ add:
 }
 {
 	"classname" "prop_dynamic"
-	"origin" "-3966 2888 -256"
-	"angles" "0 280.5 0"
+	"origin" "-3965 2886 -256"
+	"angles" "0 274 0"
 	"model" "models/props_fortifications/police_barrier001_128_reference.mdl"
 	"solid" "6"
 	"disableshadows" "1"
@@ -345,69 +345,31 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
-; --- Wooden boards on seating roof supports for spawns
-; --- Smitty's Side
+; --- Anvil cases on the scaffolding on Smitty's side
 {
 	"classname" "prop_dynamic"
-	"origin" "-2686 2216 319"
-	"angles" "0 0 5"
-	"model" "models/props_update/wood_256.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"targetname" "_props_shadow_fix"
-	"lightingorigin" "rafter_wood_lighting"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "-2686 1961 301"
-	"angles" "0 0 3"
-	"model" "models/props_update/wood_256.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"targetname" "_props_shadow_fix"
-	"lightingorigin" "rafter_wood_lighting"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "-2662 1769 294.3"
-	"angles" "0 0 0"
-	"model" "models/props_update/wood_128.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"targetname" "_props_shadow_fix"
-	"lightingorigin" "rafter_wood_lighting"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "-2534 1769 294.3"
-	"angles" "0 0 0"
-	"model" "models/props_update/wood_128.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"targetname" "_props_shadow_fix"
-	"lightingorigin" "rafter_wood_lighting"
-}
-; --- Fix lighting origins
-{
-	"classname" "info_target"
-	"origin" "-2686 2216 319"
-	"targetname" "rafter_wood_lighting"
-}
-; --- Jake's Side
-{
-	"classname" "prop_dynamic"
-	"origin" "-2178 2216 319"
-	"angles" "0 0 5"
-	"model" "models/props_update/wood_256.mdl"
+	"origin" "-2738 2406 80"
+	"angles" "0 180 0"
+	"model" "models/props_fairgrounds/anvil_case_32.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 	"targetname" "_props_shadow_fix"
 }
 {
 	"classname" "prop_dynamic"
-	"origin" "-2178 1961 301"
-	"angles" "0 0 3"
-	"model" "models/props_update/wood_256.mdl"
+	"origin" "-2738 2406 112"
+	"angles" "0 180 0"
+	"model" "models/props_fairgrounds/anvil_case_32.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"targetname" "_props_shadow_fix"
+}
+; --- Leaning plywood by the seating scaffolding on Jake's Side
+{
+	"classname" "prop_dynamic"
+	"origin" "-1961 2309 0"
+	"angles" "0 270 0"
+	"model" "models/props_industrial/plywood_leaning.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 	"targetname" "_props_shadow_fix"
@@ -463,7 +425,7 @@ modify:
 	}
 	insert:
 	{
-		; --- Remove axis warp and clip under the benches
+		; --- Remove axis warp and clip under the seating area
 		"OnVersusPostIO" "anv_mapfixes_axiswarp_anvilcase_trigmult,Kill,,10,-1"
 		"OnVersusPostIO" "anv_mapfixes_axiswarp_anvilcase_clip,Kill,,10,-1"
 		; --- Remove axis warps and clips by fire escapes
@@ -486,47 +448,6 @@ modify:
 ; ==              Add or change ladders              ==
 ; =====================================================
 add:
-; --- Ladders to get on the wooden boards on the roof supports
-; --- Smitty's side
-{
-	"classname" "func_simpleladder"
-	"origin" "-69 5823.5 83"
-	"angles" "0 90 0"
-	"model" "*102"
-	"normal.x" "0.00"
-	"normal.y" "1.00"
-	"normal.z" "0.00"
-	"team" "2"
-}
-; --- Jake's side
-{
-	"classname" "func_simpleladder"
-	"origin" "2032.5 -765 138"
-	"angles" "0 0 0"
-	"model" "*102"
-	"normal.x" "1.00"
-	"normal.y" "0.00"
-	"normal.z" "0.00"
-	"team" "2"
-}
-; --- Clipping to prevent getting stuck on ceiling
-{
-	"classname" "env_physics_blocker"
-	"origin" "-2043 1936 436"
-	"mins" "-5 -40 -4"
-	"maxs" "5 40 4"
-	"initialstate" "1"
-	"BlockType" "2"
-}
-; --- Clipping to help get on the roof supports
-{
-	"classname" "env_physics_blocker"
-	"origin" "-2047 2007 303"
-	"mins" "-3 -47 -1"
-	"maxs" "3 47 1"
-	"initialstate" "1"
-	"BlockType" "2"
-}
 ; --- Ladders on the sides of the stage
 {
 	"classname" "func_simpleladder"
